--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,6 @@
   <script src="/javascripts/test.red" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-  <div id='one'>hi</div>
+  <div id='a'>content</div>
 </body>
 </html>
