initial stab at specs

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
   <script src="/javascripts/test.red" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-  <div id='a'>content</div>
+  <div id='a' class='foo bar'>content</div>
+  <a id='link' href='/foo/bar'>a link</a>
 </body>
 </html>
