--- a/specs/index.html
+++ b/specs/index.html
@@ -9,12 +9,7 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="Assets/Styles/Specs.css" />
 	<script type="text/javascript" src="Assets/Scripts/JSSpec.js"></script>
 	<script type="text/javascript" src="Assets/Scripts/DiffMatchPatch.js"></script>
-	<script type="text/javascript" src="Assets/Scripts/Builder.js"></script>
-	
-	<script type="text/javascript" charset="utf-8">
-		Builder.includeType('source');
-		if (!Builder.includeRequest('specs')) Builder.includeType('specs');
-	</script>
+	<script type="text/javascript" src="Assets/Scripts/Includes.red"></script>
 </head>
 <body>
 	<div id='list'></div>
