--- a/specs/test.html
+++ b/specs/test.html
@@ -5,7 +5,9 @@
 <head>
 	<title>RedBull Specs</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="Assets/Styles/Specs.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="Assets/Styles/Specs.css"
+	<link rel="stylesheet" type="text/css" media="screen" href="Assets/Styles/test.sass" />
+	 />
 	<script type="text/javascript" src="Assets/Scripts/Includes.red"></script>
 </head>
 <body>
