--- a/specs/index.html
+++ b/specs/index.html
@@ -6,7 +6,7 @@
 	
 	<title>RedBull Specs</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="Assets/Styles/Specs.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="Assets/Styles/specs.sass" />
 	<script type="text/javascript" src="Assets/Scripts/JSSpec.js"></script>
 	<script type="text/javascript" src="Assets/Scripts/DiffMatchPatch.js"></script>
 	<script type="text/javascript" src="Assets/Scripts/Includes.red"></script>
