Fairly large additions to speccing

--- a/specs/index.html
+++ b/specs/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-
 <head>
-	
 	<title>RedBull Specs</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<link rel="stylesheet" type="text/css" media="screen" href="Assets/Styles/specs.sass" />
-	<script type="text/javascript" src="Assets/Scripts/JSSpec.js"></script>
-	<script type="text/javascript" src="Assets/Scripts/DiffMatchPatch.js"></script>
-	<script type="text/javascript" src="Assets/Scripts/Includes.red"></script>
+	<link rel="stylesheet" type="text/css" media="screen" href="lib/stylesheets/specs.sass" />
+	<script type="text/javascript" src="lib/red_spec/Includes.red"></script>
 </head>
 <body>
 	<div id='list'></div>
