Updates to the DSL

--- a/specs/index.html
+++ b/specs/index.html
@@ -4,7 +4,7 @@
 	<title>RedBull Specs</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<link rel="stylesheet" type="text/css" media="screen" href="lib/stylesheets/specs.sass" />
-	<script type="text/javascript" src="lib/red_spec/Includes.red"></script>
+	<script type="text/javascript" src="lib/red_spec/includes.red"></script>
 </head>
 <body>
 </body>
