--- a/html/selectors.html
+++ b/html/selectors.html
@@ -57,8 +57,8 @@
   
   <!-- Document['#c_id:nth-child(2n)']        every even child  -->
   <!-- Document['#c_id:nth-child(n)']         all children      -->
-  <!-- Document['#c_id:nth-child(2n+1)')      every odd child   -->
-  <!-- Document['#c_id:nth-child(4n+3)')      3, 7, 11, 15, etc -->
+  <!-- Document['#c_id:nth-child(2n+1)']      every odd child   -->
+  <!-- Document['#c_id:nth-child(4n+3)']      3, 7, 11, 15, etc -->
   <div id='c_id'>
     <div></div>
     <div></div>
@@ -77,8 +77,24 @@
     <div></div>
   </div>
   
+  <!-- Document['#d_id div:nth-child(only)']  -->
   <div id="d_id">
     <div id="only"></div>
   </div>
+  
+  
+  <!-- Document['div em'] --> <!-- Document['div > em'] -->
+  
+  <div>
+    <em></em>
+    <p>
+      <em></em>
+    </p>
+  </div>
+  
+  <!-- Document['h4 p'] -->
+  <h4></h4>
+  <p>
+  
 </body>
 </html>
