Element#[ ] now takes multiple selectors separated by commas

--- a/html/dom_walking.html
+++ b/html/dom_walking.html
@@ -13,5 +13,9 @@
    <div id='c_element'></div>
    <div id='d_element'></div>
  </div>  
+ <form id='query_string_form'>
+   <input type="text" name="me" value="10">
+   <textarea name="you" rows="8" cols="40">you</textarea>
+ </form>
 </body>
 </html>
