Added support for identifying Safari v525

--- a/html/inserters.html
+++ b/html/inserters.html
@@ -7,6 +7,6 @@
 <body>
   <div id='container' style='height:200px; width:200px; background-color:black'></div>
   <div id='blue' style='height:100px; width:100px; background-color:blue'></div>
-  <div id='green' style='height:100px; width:100px; background-color:green'></div>
+  <div id='green' style='height:100px; width:100px; background-color:green' class=''></div>
 </body>
 </html>
