--- a/html/dimensions.html
+++ b/html/dimensions.html
@@ -5,8 +5,9 @@
   <script src="/test/dimensions.red" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-  <div id='container' style='height:200px; width:200px; background-color:black'></div>
-  <div id='blue' style='height:100px; width:100px; background-color:blue'></div>
-  <div id='green' style='height:100px; width:100px; background-color:green' class=''></div>
+  <div id='container' style='height:100px; width:100px; background-color:black; overflow:scroll'>
+    <div id='blue' style='height:200px; width:200px; background-color:blue'></div>
+  </div>
+  <div id='green' style='height:100px; width:100px; background-color:green'></div>
 </body>
 </html>
