updated tests to reflect Red's new more powerful require statement

--- a/tests/effect.html
+++ b/tests/effect.html
@@ -2,8 +2,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <title>Red Herring: These aren't the formats you're looking for</title>
-  <script src="/test/effect.red" type="text/javascript" charset="utf-8"></script>
-  <!-- <script src="/javascripts/moo.js" type="text/javascript" charset="utf-8"></script> -->
+  <script src="effect.red" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
   <div id='black' style='height:100px; width:100px; background-color:#000;'></div>
