--- a/tests/code_events.html
+++ b/tests/code_events.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Red Herring: These aren't the formats you're looking for</title>
-    <script src="/test/code_events.red" type="text/javascript" charset="utf-8"></script>
+    <script src="code_events.red" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
     <div id='blue' style='height:100px; width:100px; background-color:blue'></div>
