--- a/tests/dimensions.html
+++ b/tests/dimensions.html
@@ -2,7 +2,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <title>Red Herring: These aren't the formats you're looking for</title>
-  <script src="/test/dimensions.red" type="text/javascript" charset="utf-8"></script>
+  <script src="dimensions.red" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
   <div id='container' style='height:100px; width:100px; background-color:black; overflow:scroll'>
