--- a/tests/dom_walking.html
+++ b/tests/dom_walking.html
@@ -2,7 +2,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <title>Red Herring: These aren't the formats you're looking for</title>
-  <script src="/test/dom_walking.red" type="text/javascript" charset="utf-8"></script>
+  <script src="dom_walking.red" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
  <div id='container'>
