--- a/tests/selectors.html
+++ b/tests/selectors.html
@@ -2,7 +2,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <title>Red Herring: These aren't the formats you're looking for</title>
-  <script src="/test/selectors.red" type="text/javascript" charset="utf-8"></script>
+  <script src="selectors.red" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
   
