removed spurious logging

--- a/tests/effect.html
+++ b/tests/effect.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div id='black' style='height:100px; width:100px; background-color:#000;'></div>
-  <div id='green' style='height:100px; width:100px; background-color:green'></div>
+  <div id='green' style='height:100px; width:100px; background-color:#008000'></div>
   <div id='blue' style='height:100px; width:200px; background-color:blue'></div>
 </body>
 </html>
